Color is now changing according to section
*need to test with matching picture

--- a/src/html/css/custom.css
+++ b/src/html/css/custom.css
@@ -62,8 +62,7 @@ main{
 	width:100%;
 }
 #sec2{
-	background:#2da491 url(../images/placeholder.jpg) no-repeat 50% 20%;
-	background-color: #2da491;
+	background:#6666CC url(../images/placeholder.jpg) no-repeat 50% 20%;
 	height:100%;
 	width:100%;
 }
