--- a/src/html/css/custom.css
+++ b/src/html/css/custom.css
@@ -1,3 +1,18 @@
+@import url(http://fonts.googleapis.com/css?family=Gloria+Hallelujah);
+@import url(http://fonts.googleapis.com/css?family=Aladin);
+@import url(http://fonts.googleapis.com/css?family=Walter+Turncoat);
+
+@font-face {
+    font-family: 'aduma';
+    src: url('../fonts/Aduma_webfont/aduma-medium-webfont.eot');
+    src: url('../fonts/Aduma_webfont/aduma-medium-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/Aduma_webfont/aduma-medium-webfont.woff') format('woff'),
+         url('../fonts/Aduma_webfont/aduma-medium-webfont.ttf') format('truetype'),
+         url('../fonts/Aduma_webfont/aduma-medium-webfont.svg#adumamedium') format('svg');
+    font-weight: 500;
+    font-style: normal;
+}
+
 * {
 	margin:0;
 	padding:0;	
@@ -43,7 +58,7 @@ aside{
 }
 footer{
 	background-color: #2da491;
-	height:58px;
+	height:75px;
 	width:100%;
     bottom:0px;
     right:0px;
@@ -53,8 +68,6 @@ main{
 	background-color: #2da491;
 	height:100%;
 	width:100%;
-	
-	
 }
 #sec1{
 	background:#2da491 url(../images/placeholder.jpg) no-repeat 50% 20%;
@@ -62,10 +75,67 @@ main{
 	width:100%;
 }
 #sec2{
-	background:#2da491 url(../images/placeholder.jpg) no-repeat 50% 20%;
-	background-color: #2da491;
+	background-color: #CE404A;	
 	height:100%;
 	width:100%;
+	position: relative;
+}
+#percentageButtons {
+	position: absolute;
+	margin-left: 40%;
+	margin-top: 8%;
+}
+#percentageInputs {
+	position: absolute;
+	margin-left: 27%;
+	margin-top: 20%;
+}
+#percentageInputs>input {
+	text-align: center;
+	border-radius: 30px;
+	height: 32px;
+	width: 200px;
+	font-family: Walter Turncoat,Gloria Hallelujah,arial;
+	font-size: 18px;
+	font-weight: bold;
+	margin-right: 12px;
+}
+#percentageInputs>p {
+	display: inline-block;
+	font: 24px aduma,Arial,Geneva, sans-serif;
+	float: right;
+}
+#percentageInputs>p:nth-child(6) {
+	margin-right: 9%;  
+}
+#percentageInputs>p:nth-child(7), #percentageInputs>p:nth-child(8) {
+	padding-right: 20%;
+}
+button {
+	text-align: center;
+	width: 80px;
+	padding: 8px 10px;
+	margin-right: 20px;
+	font: bold 20px Walter Turncoat,Tahoma, Geneva, sans-serif;
+	font-style:normal;
+	color:#ffffff;
+	background: #F79A00;
+	/* #1568db;*/
+	border:0px solid #ffffff;
+	text-shadow:0px -1px 1px #222222;
+	box-shadow:-1px 2px 5px #000000;
+	-moz-box-shadow:-1px 2px 5px #000000;
+	-webkit-box-shadow:-1px 2px 5px #000000;
+	border-radius:10px 10px 10px 10px;
+	-moz-border-radius:10px 10px 10px 10px;
+	-webkit-border-radius:10px 10px 10px 10px;
+	cursor:pointer;
+}
+button:hover {
+	cursor:pointer;
+	position:relative;
+	top:2px;
+	font: bold 24px Walter Turncoat,Tahoma, Geneva, sans-serif;
 }
 
 /* Common styles and resets */
@@ -128,4 +198,31 @@ main{
 	background-color: white;
 	-webkit-transform: scale(1.5);
 	transform: scale(1.5);
+}
+
+/* Shaked elements */
+
+@-webkit-keyframes spaceboots {
+	0% { -webkit-transform: translate(2px, 1px) rotate(0deg); }
+	10% { -webkit-transform: translate(-1px, -2px) rotate(-1deg); }
+	20% { -webkit-transform: translate(-3px, 0px) rotate(1deg); }
+	30% { -webkit-transform: translate(0px, 2px) rotate(0deg); }
+	40% { -webkit-transform: translate(1px, -1px) rotate(1deg); }
+	50% { -webkit-transform: translate(-1px, 2px) rotate(-1deg); }
+	60% { -webkit-transform: translate(-3px, 1px) rotate(0deg); }
+	70% { -webkit-transform: translate(2px, 1px) rotate(-1deg); }
+	80% { -webkit-transform: translate(-1px, -1px) rotate(1deg); }
+	90% { -webkit-transform: translate(2px, 2px) rotate(0deg); }
+	100% { -webkit-transform: translate(1px, -2px) rotate(-1deg); }
+}
+.shake:hover,
+.shake:focus {
+	-webkit-animation-name: spaceboots;
+	-webkit-animation-duration: 0.8s;
+	-webkit-transform-origin:50% 50%;
+	-webkit-animation-iteration-count: infinite;
+	-webkit-animation-timing-function: linear;
+}
+.shake {
+	display:inline-block
 }
