--- a/src/html/css/custom.css
+++ b/src/html/css/custom.css
@@ -1,5 +1,3 @@
-@import url(http://fonts.googleapis.com/css?family=Gloria+Hallelujah);
-@import url(http://fonts.googleapis.com/css?family=Aladin);
 @import url(http://fonts.googleapis.com/css?family=Walter+Turncoat);
 
 @font-face {
@@ -75,11 +73,7 @@ main{
 	width:100%;
 }
 #sec2{
-<<<<<<< HEAD
 	background-color: #CE404A;	
-=======
-	background:#6666CC url(../images/placeholder.jpg) no-repeat 50% 20%;
->>>>>>> origin/master
 	height:100%;
 	width:100%;
 	position: relative;
@@ -99,7 +93,7 @@ main{
 	border-radius: 30px;
 	height: 32px;
 	width: 200px;
-	font-family: Walter Turncoat,Gloria Hallelujah,arial;
+	font-family: Walter Turncoat,aduma,Arial;
 	font-size: 18px;
 	font-weight: bold;
 	margin-right: 12px;
@@ -124,7 +118,6 @@ button {
 	font-style:normal;
 	color:#ffffff;
 	background: #F79A00;
-	/* #1568db;*/
 	border:0px solid #ffffff;
 	text-shadow:0px -1px 1px #222222;
 	box-shadow:-1px 2px 5px #000000;
