--- a/src/html/css/custom.css
+++ b/src/html/css/custom.css
@@ -89,6 +89,9 @@ main{
 	margin-top: 20%;
 }
 #percentageInputs>input {
+	background: #FFFFFF url("../images/NIS.png") no-repeat center right;
+	background-position-x: 90%;
+	background-size: 15px 15px;
 	text-align: center;
 	border-radius: 30px;
 	height: 32px;
@@ -97,6 +100,7 @@ main{
 	font-size: 18px;
 	font-weight: bold;
 	margin-right: 12px;
+	outline: none;
 }
 #percentageInputs>p {
 	display: inline-block;
@@ -109,6 +113,10 @@ main{
 #percentageInputs>p:nth-child(7), #percentageInputs>p:nth-child(8) {
 	padding-right: 20%;
 }
+
+
+
+
 button {
 	text-align: center;
 	width: 80px;
