--- a/css/custom.css
+++ b/css/custom.css
@@ -1,4 +1,6 @@
+/* 
 @import url(http://fonts.googleapis.com/css?family=Walter+Turncoat);
+ */
 
 @font-face {
     font-family: 'aduma';
@@ -38,46 +40,53 @@ a:visited,a:active,a:after{
 #scene{
 }
 nav{
-	background-color: #2da491;
 	height:711px;
 	width:91px;
-	top: 0px;
+	top: 10%;
 	right: 0px;
 	position:fixed;
 }
 aside{
-	height:711px;
+	height:700px;
 	width:180px;
 	position:fixed;
-	bottom: 58px;
+	top: 70px;
 	left:0;
-	background: #2da491 url(../images/man_closed_bag.png) no-repeat center 483px;
+	background: url("../images/Frame/PensionBag.png") no-repeat center 350px;
 	background-size : 150px 150px;
 }
-footer{
-	background-color: #2da491;
+header{
+	background:url("../images/Frame/Social_Twitter_S.png") no-repeat 1% 45%,
+			   url("../images/Frame/Social_Facebook.png") no-repeat 5% 45%;
 	height:75px;
 	width:100%;
-    bottom:0px;
-    right:0px;
+    top:0%;
+    left:0%;
 	position:fixed;
 }
 main{
-	background-color: #2da491;
+	background-color: #84c560;
 	height:100%;
 	width:100%;
 }
 #sec1{
-	background:#2da491 url(../images/placeholder.jpg) no-repeat 50% 20%;
+	background:#84c560 url("") no-repeat 50% 30%;
 	height:100%;
 	width:100%;
 }
 #sec2{
-	background-color: #CE404A;	
+	background:url("../images/Screen 2/Office_Empty.png") no-repeat 25% 30%,
+			   url("../images/Screen 2/sofa_man.png") no-repeat 80% 51.2%,
+			   #4a9e69 url("../images/Screen 2/text.png") no-repeat 95% 10%;
 	height:100%;
 	width:100%;
-	position: relative;
 }
+#sec3{
+	background:#dddddd;
+	height:100%;
+	width:100%;
+}
+
 #percentageButtons {
 	position: absolute;
 	margin-left: 40%;
