--- a/css/custom.css
+++ b/css/custom.css
@@ -138,6 +138,9 @@ input[type='range']::-moz-range-thumb {
         width: 100px;
         background: url("../images/Screen 1/Age_Button_None.png")no-repeat;
 }
+
+/* --------sec 2 --------------------------------------------------------------------*/
+
 #sec2{	
 	background:#4a9e69 url("../images/Screen 2/text.png") no-repeat 95% 10%;
 	height:100%;
@@ -150,37 +153,9 @@ input[type='range']::-moz-range-thumb {
 #sec2>img:nth-child(2){
 	margin-top:5%;
 }
-#sec5{	
-	background: #4a9e69;
-	height:100%;
-	width:100%;
-}
-#sec6{	
-	background: #4a9e69;
-	height:100%;
-	width:100%;
-}
-#sec7{	
-	background: #4a9e69;
-	height:100%;
-	width:100%;
-}
-#sec8{
-	background: #4a9e69	;
-	position: relative;
-	height:100%;
-	width:100%;
-}
-#sec9{	
-	background: #000000;
-	height:100%;
-	width:100%;
-}
-#sec10{	
-	background: #4a9e69;
-	height:100%;
-	width:100%;
-}
+
+/* --------sec 3 --------------------------------------------------------------------*/
+
 #sec3{
 	background:#dddddd url("../images/Screen 3/red_line.png") no-repeat center 47%;
 	height:100%;
@@ -200,7 +175,7 @@ input[type='range']::-moz-range-thumb {
     transition:height 1s;
     -webkit-transition:height 1s;
     font-size:30px; 
-    
+    text-align: center;
 }
 ::-webkit-input-placeholder { /* WebKit browsers */
     color:    #686868;
@@ -217,14 +192,81 @@ input[type='range']::-moz-range-thumb {
    color:    #686868;
 }
 #paycheck:focus{
-
 }
+
+/* --------sec 4 --------------------------------------------------------------------*/
 
 #sec4{
 	background:#ffbf47 url("../images/Screen 3/Salary.png") no-repeat 59% 27%;
 	height:100%;
 	width:100%;
 }
+#sec5{	
+	background: #4a9e69;
+	height:100%;
+	width:100%;
+}
+#sec6{	
+	background: #4a9e69;
+	height:100%;
+	width:100%;
+}
+#sec7{	
+	background: #4a9e69;
+	height:100%;
+	width:100%;
+}
+
+/* --------sec 8 --------------------------------------------------------------------*/
+
+#sec8{
+	background: #4a9e69	;
+	position: relative;
+	height:100%;
+	width:100%;
+}
+#envelope_up {
+	position: absolute;
+	top: 0%;
+	left: 22%;
+	height: 508px;
+	width: 759px;
+	background: url("../images/Screen 8/Envelope_Back.png") no-repeat center top;
+	z-index: 1;
+}
+#envelope_down {
+	position: absolute;
+	top: 33%;
+	left: 22%;
+	height: 382px;
+	width: 759px;
+	background: url("../images/Screen 8/Envelope.png") no-repeat center 50%;
+	z-index: 3;
+}
+#card {
+	position: absolute;
+	top: 7%;
+	left: 25%;
+	margin-left: 9px;
+	height: 703px;
+	width: 667px;
+	background: url("../images/Screen 8/Card.png") no-repeat center 50%;
+	z-index: 2;
+}
+
+/* --------sec 9 --------------------------------------------------------------------*/
+
+#sec9{	
+	background:#dddddd;
+	height:100%;
+	width:100%;
+}
+#sec10{	
+	background: #4a9e69;
+	height:100%;
+	width:100%;
+}
+
 
 #percentageButtons {
 	position: absolute;
@@ -382,34 +424,3 @@ button:hover {
 	display:inline-block
 }
 
-
-/* --------sec 8 --------------------------------------------------------------------*/
-
-#envelope_up {
-	position: absolute;
-	top: 0%;
-	left: 22%;
-	height: 508px;
-	width: 759px;
-	background: url("../images/Screen 8/Envelope_Back.png") no-repeat center top;
-	z-index: 1;
-}
-#envelope_down {
-	position: absolute;
-	top: 33%;
-	left: 22%;
-	height: 382px;
-	width: 759px;
-	background: url("../images/Screen 8/Envelope.png") no-repeat center 50%;
-	z-index: 3;
-}
-#card {
-	position: absolute;
-	top: 7%;
-	left: 25%;
-	margin-left: 9px;
-	height: 703px;
-	width: 667px;
-	background: url("../images/Screen 8/Card.png") no-repeat center 50%;
-	z-index: 2;
-}
