--- a/css/custom.css
+++ b/css/custom.css
@@ -54,6 +54,7 @@ aside{
 	left:0;
 	background: url("../images/Frame/PensionBag.png") no-repeat center 350px;
 	background-size : 150px 150px;
+	display:none;
 }
 header{
 	background:url("../images/Frame/Social_Twitter_S.png") no-repeat 1% 45%,
@@ -77,7 +78,7 @@ main{
 #user{
 	position:relative;
 	top:20%;
-	left:30%;
+	left:25%;
 }
 #male{
 	position:relative;
@@ -197,20 +198,30 @@ input[type='range']::-moz-range-thumb {
 /* --------sec 4 --------------------------------------------------------------------*/
 
 #sec4{
+	background: #3a5f8d;
+	height:100%;
+	width:100%;
+}
+
+/* --------sec 5 --------------------------------------------------------------------*/
+#sec5{	
 	background:#ffbf47 url("../images/Screen 3/Salary.png") no-repeat 59% 27%;
 	height:100%;
 	width:100%;
 }
-#sec5{	
-	background: #4a9e69;
-	height:100%;
-	width:100%;
-}
+
+
+
+/* --------sec 6 --------------------------------------------------------------------*/
 #sec6{	
-	background: #4a9e69;
+	background: #c73746;
 	height:100%;
 	width:100%;
 }
+
+
+
+/* --------sec 7 --------------------------------------------------------------------*/
 #sec7{	
 	background: #4a9e69;
 	height:100%;
