--- a/css/custom.css
+++ b/css/custom.css
@@ -70,6 +70,9 @@ main{
 	height:100%;
 	width:100%;
 }
+
+/* --------sec 1 --------------------------------------------------------------------*/
+
 #sec1{
 	background:#84c560 url("../images/Screen 1/text.png") no-repeat 95% 10%;
 	height:100%;
@@ -93,51 +96,23 @@ main{
 	outline: 0;
 }
 
-.ui-slider-handle
-{
-	background: url("../images/Screen 1/Age_Button_None.png")0% 30% no-repeat !important;
-    width:100px !important;
-    height:100px !important;
-    top:-18px !important;
-    border:none !important;
-}
-.ui-slider-vertical{
-	background: url("../images/Screen 1/Age_line_None.png")50% 50% no-repeat !important;
-	border:none !important;
+#slider {
+ border:none;
+ position:relative;
+ left:-170%;
+ height:100px;
+ width:30px;
+ padding: 0.5em; 
+ background: url("../images/Screen 1/Age_Button_None.png") no-repeat 100%;
 }
 
-#slider-vertical{
-	height:40%;
-	position:relative;
-    top:15%;
-    left:30%;
-}
-input[type='range']{
-		position:relative;
-		top:-10%;
-		left:30%;
-        vertical-align: middle;
-        writing-mode: bt-lr; /* IE */
-		-webkit-appearance: slider-vertical; /* WebKit */
-		-webkit-appearance: none;
-		width: 8px;
-		height: 375px;
-		padding: 0 5px;
-		background: url("../images/Screen 1/Age_line_None.png") no-repeat;
-}
-input[type='range']::-webkit-slider-thumb {
-		-webkit-appearance: none;
-		margin-left:250%;
-        height:120px;
-        width: 100px;
-        background: url("../images/Screen 1/Age_Button_None.png")no-repeat;
-}
-input[type='range']::-moz-range-thumb {
-		-webkit-appearance: none;
-		margin-left:250%;
-        height: 120px;
-        width: 100px;
-        background: url("../images/Screen 1/Age_Button_None.png")no-repeat;
+#slider_wrapper{
+	position:absolute;
+	top:24%;
+	left:26%;
+	height:400px;
+	width:10px;
+	background: url("../images/Screen 1/Age_line_None.png") no-repeat 100%;
 }
 
 /* --------sec 2 --------------------------------------------------------------------*/
@@ -177,6 +152,7 @@ input[type='range']::-moz-range-thumb {
     -webkit-transition:height 1s;
     font-size:30px; 
     text-align: center;
+    line-height:35px;
 }
 ::-webkit-input-placeholder { /* WebKit browsers */
     color:    #686868;
