--- a/css/custom.css
+++ b/css/custom.css
@@ -58,11 +58,12 @@ aside{
 header{
 	background:url("../images/Frame/Social_Twitter_S.png") no-repeat 1% 45%,
 			   url("../images/Frame/Social_Facebook.png") no-repeat 5% 45%;
-	height:75px;
+	height:8%;
 	width:100%;
     top:0%;
     left:0%;
 	position:fixed;
+	z-index: 10;
 }
 main{
 	background-color: #84c560;
@@ -212,7 +213,7 @@ input[type='range']::-moz-range-thumb {
 	width:100%;
 }
 #sec7{	
-	background: #4a9e69;
+	background:#dddddd;
 	height:100%;
 	width:100%;
 }
@@ -221,39 +222,51 @@ input[type='range']::-moz-range-thumb {
 
 #sec8{
 	background: #4a9e69	;
-	position: relative;
 	height:100%;
 	width:100%;
+	margin-top: 10%;
 }
 #envelope_up {
-	position: absolute;
-	top: 0%;
+	position: relative;
+	margin-top: -450px;
+	top: 23%;
 	left: 22%;
 	height: 508px;
 	width: 759px;
 	background: url("../images/Screen 8/Envelope_Back.png") no-repeat center top;
+	background-size: 75%;
 	z-index: 1;
 }
 #envelope_down {
-	position: absolute;
-	top: 33%;
+	position: relative;
+	margin-top: -598px;
+	top: 53%;
 	left: 22%;
 	height: 382px;
 	width: 759px;
 	background: url("../images/Screen 8/Envelope.png") no-repeat center 50%;
+	background-size: 75%;
 	z-index: 3;
 }
 #card {
-	position: absolute;
-	top: 7%;
+	position: relative;
 	left: 25%;
-	margin-left: 9px;
-	height: 703px;
+	top: 17%;
+	margin-top: -250px;
+	margin-left: 5px;
+	height:	 380px; 
 	width: 667px;
 	background: url("../images/Screen 8/Card.png") no-repeat center 50%;
+	background-position-y: 0px;
+	background-size: 78%;
 	z-index: 2;
+	transition-property: height,margin-top;
+	transition-duration: 0.5s;
 }
-
+#card:hover {
+	height: 520px;
+	margin-top: -390px;
+}
 /* --------sec 9 --------------------------------------------------------------------*/
 
 #sec9{	
