Slider prepared of age groups
offset function is inside: .draggable({drag: function

--- a/css/custom.css
+++ b/css/custom.css
@@ -116,6 +116,11 @@ main{
 	background: url("../images/Screen 1/Age_line_None.png") no-repeat 100%;
 }
 
+#slider_num{
+	margin-top:140%;
+	margin-left:27%;
+}
+
 /* --------sec 2 --------------------------------------------------------------------*/
 
 #sec2{	
