--- a/css/custom.css
+++ b/css/custom.css
@@ -119,6 +119,7 @@ main{
 #slider_num{
 	margin-top:140%;
 	margin-left:27%;
+	color:#FFFFFF;
 }
 
 /* --------sec 2 --------------------------------------------------------------------*/
@@ -463,7 +464,7 @@ main{
 /* --------sec 9 --------------------------------------------------------------------*/
 
 #sec9{	
-	background:#dddddd;
+	background:#b5b5b5;
 	height:100%;
 	width:100%;
 }
