--- a/css/custom.css
+++ b/css/custom.css
@@ -464,11 +464,54 @@ main{
 /* --------sec 9 --------------------------------------------------------------------*/
 
 #sec9{	
-	background:#b5b5b5;
+	background: #b5b5b5 url("../images/Screen 9/Man_Box.png") no-repeat 50% 92%;
 	height:100%;
 	width:100%;
 }
+#sec_text{
+	position:relative;
+	top:9%;
+	left:73%;
+	width:308px;
+	height:32px;
+	background: #b5b5b5 url("../images/Screen 9/text.png") no-repeat 50% 92%;
+}
 
+#B_no{
+	position:relative;
+	top:40.8%;
+	left:36%;
+	width:163px;
+	height:121px;
+	background-image: url("../images/Screen 9/Button_No.png");
+}
+
+#B_yes{
+	position:relative;
+	top:25%;
+	left:51%;
+	width:163px;
+	height:121px;
+	background-image: url("../images/Screen 9/Button_Yes.png");
+}
+
+#B_no:hover{
+	position:relative;
+	top:40.8%;
+	left:36%;
+	width:163px;
+	height:121px;
+	background-image: url("../images/Screen 9/Button_No_S.png");
+}
+
+#B_yes:hover{
+	position:relative;
+	top:25%;
+	left:51%;
+	width:163px;
+	height:121px;
+	background-image: url("../images/Screen 9/Button_Yes_S.png");
+}
 
 /* --------sec 10 --------------------------------------------------------------------*/
 #sec10{	
