--- a/css/custom.css
+++ b/css/custom.css
@@ -539,13 +539,21 @@ main{
 }
 
 /* --------sec 11 --------------------------------------------------------------------*/
-
+#sec11{	
+	background: #ffbf47;
+	height:100%;
+	width:100%;
+}
 
 
 
 /* --------sec 12 --------------------------------------------------------------------*/
 
-
+#sec12{	
+	background: #ffbf47;
+	height:100%;
+	width:100%;
+}
 
 
 /* Common styles and resets */
