--- a/css/custom.css
+++ b/css/custom.css
@@ -75,10 +75,22 @@ main{
 /* --------sec 1 --------------------------------------------------------------------*/
 
 #sec1{
-	background:#84c560 url("../images/Screen 1/text.png") no-repeat 95% 10%;
+	position:relative;
 	height:100%;
 	width:100%;
 }
+
+#sec1>h1 {
+	position: absolute;
+	font-family: aduma;
+	font-size: 40px;
+	color: #FFFFFF;
+	text-align: right;	
+	top: 28px;
+	right: 40px;
+	letter-spacing: 1px;
+}
+
 #user{
 	position:relative;
 	top:20%;
@@ -125,7 +137,8 @@ main{
 /* --------sec 2 --------------------------------------------------------------------*/
 
 #sec2{	
-	background:#4a9e69 url("../images/Screen 2/text.png") no-repeat 95% 10%;
+	position:relative;
+	background:#4a9e69;
 	height:100%;
 	width:100%;
 }
@@ -135,6 +148,18 @@ main{
 }
 #sec2>img:nth-child(2){
 	margin-top:5%;
+	margin-left:17%;
+}
+
+#sec2>h1 {
+	position: absolute;
+	font-family: aduma;
+	font-size: 40px;
+	color: #FFFFFF;
+	text-align: right;	
+	top: 28px;
+	right: 40px;
+	letter-spacing: 1px;
 }
 
 /* --------sec 3 --------------------------------------------------------------------*/
@@ -414,17 +439,41 @@ main{
 
 /* --------sec 6 --------------------------------------------------------------------*/
 #sec6{	
-	background: #c73746 url("../images/Screen 6/sign_base.png") no-repeat 50% 72%;
+	background: #c73746 url("../images/Screen 6/sign_base.png") no-repeat 46% 72%;
+	position:relative;
 	height:100%;
-	width:100%;
-	
+	width:100%;	
 	/* div.animate({ top: '-=100px' }, 600, 'easeOutCubic', function () { … }) */
 }
 
+#sec6 p{
+	text-align: right;
+	font-size:15px;
+	padding-top:25px;
+	padding-left:10px;
+	padding-right:15px;
+	font-family: aduma;
+}
+
+.headerz{
+	font-weight: 900;
+	font-size:20px;
+}
+
+#sec6>h1 {
+	position: absolute;
+	font-family: aduma;
+	font-size: 40px;
+	color: #FFFFFF;
+	text-align: right;	
+	top: 28px;
+	right: 40px;
+	letter-spacing: 1px;
+}
 
 #no_idea{
 	position:relative;
-	left:23%;
+	left:20%;
 	top:80%;
 	z-index:0;
 	height:0px;
@@ -433,7 +482,7 @@ main{
 
 #medium{
 	position:relative;
-	left:11.5%;
+	left:8.5%;
 	top:80%;
 	z-index:1;
 	height:0px;
@@ -442,7 +491,7 @@ main{
 
 #solid{
 	position:relative;
-	left:4%;
+	left:1%;
 	top:80%;
 	z-index:2;
 	height:0px;
@@ -451,7 +500,7 @@ main{
 
 #danger{
 	position:relative;
-	right:17%;
+	right:20%;
 	top:80%;
 	z-index:0;
 	height:0px;
@@ -461,7 +510,7 @@ main{
 #p1{
 	position:relative;
 	bottom:40%;
-	right:80%;
+	right:83%;
 	outline: 0;
 	opacity:0;
 	width:42px;
@@ -473,7 +522,7 @@ main{
 #p2{
 	position:relative;
 	bottom:100%;
-	right:30%;
+	right:33%;
 	outline: 0;
 	opacity:0;
 	width:42px;
@@ -484,7 +533,7 @@ main{
 #p3{
 	position:relative;
 	bottom:110%;
-	right:70%;
+	right:73%;
 	outline: 0;
 	opacity:0;
 	width:42px;
@@ -495,7 +544,7 @@ main{
 #p4{
 	position:relative;
 	bottom:85%;
-	right:8%;
+	right:11%;
 	outline: 0;
 	opacity:0;
 	width:42px;
@@ -507,48 +556,52 @@ main{
 #sec6 input:hover{background:url("../images/Screen 6/plus_hover.png");}
 
 #plus1 {
-	position:relative;
-	bottom:50%;
+	position:absolute;
+	top:10%;
 	left:10%;
     width: 200px;
-    height: 100px;
+    height: 150px;
     background-color: rgba(153,35,47,0.5);
     display:none;
-    z-index:3;
+    z-index:1;
     color:#FFFFFF;
+    border-radius:5px;
   }
 #plus2{
-	position:relative;
-	bottom:30%;
+	position:absolute;
+	top:25%;
 	left:35%;
 	width: 200px;
-	height: 100px;
+	height: 150px;
 	background-color: rgba(153,35,47,0.5);
 	display:none;
-	z-index:3;
+	z-index:2;
 	color:#FFFFFF;
+	border-radius:5px;
 	}
 #plus3 {
-	position:relative;
-	bottom:30%;
-	left:50%;
+	position:absolute;
+	top:20%;
+	left:56%;
 	width: 200px;
-	height: 100px;
+	height: 150px;
 	background-color: rgba(153,35,47,0.5);
 	display:none;
 	z-index:3;
 	color:#FFFFFF;
+	border-radius:5px;
 	}
 #plus4 {
-	position:relative;
-	bottom:55%;
+	position:absolute;
+	top:17%;
 	left:70%;
 	width: 200px;
-	height: 100px;
+	height: 150px;
 	background-color: rgba(153,35,47,0.5);
 	display:none;
-	z-index:3;
+	z-index:4;
 	color:#FFFFFF;
+	border-radius:5px;
 	}
 /* --------sec 7 --------------------------------------------------------------------*/
 #sec7{	
@@ -667,13 +720,26 @@ main{
 /* --------sec 10 --------------------------------------------------------------------*/
 #sec10{	
 	background: #ffbf47 url("../images/Screen 10/Bos.png") no-repeat 50% 30%;
+	position:relative;
 	height:100%;
 	width:100%;
 }
 
+#sec10>h1 {
+	position: absolute;
+	font-family: aduma;
+	font-size: 40px;
+	color: #FFFFFF;
+	text-align: right;	
+	top: 28px;
+	right: 40px;
+	letter-spacing: 1px;
+}
+
+
 #boss_face{
 	position:relative;
-	top:2%;
+	top:15.5%;
 	left:44.8%;
 	width:115px;
 	height:115px;
@@ -682,21 +748,11 @@ main{
 
 #boss_talk{
 	position:relative;
-	bottom:39%;
+	bottom:25%;
 	left:58%;
 	width:145px;
 	height:140px;
 	background-image: url("../images/Screen 10/Bos_Talk2.png");
-}
-
-#sec10_text{
-	position:relative;
-	top:3%;
-	left:45%;
-	width:676px;
-	height:104px;
-	background: #ffbf47 url("../images/Screen 10/text.png") no-repeat 50% 92%;
-	background-size:70%;
 }
 
 .progressbar {
@@ -704,10 +760,11 @@ main{
  width: 30px;
  height: 215px;
  position: relative;
- bottom:15%;
+ top:2%;
  left:15%;
  border-radius: 25px;
 }
+
 .progressbar-value {
  position: absolute;
  display: block;
