--- a/css/custom.css
+++ b/css/custom.css
@@ -41,6 +41,14 @@ a{
 a:visited,a:active,a:after{
 		color:black;
 }
+
+html{
+  height: 100%;
+}
+body {
+  min-height: 100%;
+}
+
 #wrapper{
 	height:768px;
 	width:100%;
@@ -77,7 +85,6 @@ header{
 	z-index: 10;
 }
 main{
-	background-color: #84c560;
 	height:100%;
 	width:100%;
 }
@@ -85,8 +92,9 @@ main{
 /* --------sec 1 --------------------------------------------------------------------*/
 
 #sec1{
+	background-color: #84c560;
 	position:relative;
-	height:100%;
+	height:100vh;
 	width:100%;
 }
 
@@ -149,7 +157,7 @@ main{
 #sec2{	
 	position:relative;
 	background:#4a9e69;
-	height:100%;
+	height:100vh;
 	width:100%;
 }
 #sec2>img:nth-child(1){
@@ -176,7 +184,7 @@ main{
 
 #sec3{
 	background:#3a5f8d;
-	height:100%;
+	height:100vh;
 	width:100%;
 	position: relative;
 }
@@ -223,7 +231,7 @@ main{
 
 #sec4{
 	background: #3a5f8d;
-	height:100%;
+	height:100vh;
 	width:100%;
 	position:relative;
 }
@@ -331,7 +339,7 @@ main{
 /* --------sec 5 --------------------------------------------------------------------*/
 #sec5{	
 	background:#ffbf47;
-	height:100%;
+	height:100vh;
 	width:100%;
 }
 
@@ -449,9 +457,9 @@ main{
 
 /* --------sec 6 --------------------------------------------------------------------*/
 #sec6{	
-	background: #c73746 url("../images/Screen 6/sign_base.png") no-repeat 45.5% 77%;
+	background: #c73746 url("../images/Screen 6/sign_base.png") no-repeat 45.5% 97%;
 	position:relative;
-	height:100%;
+	height:100vh;
 	width:100%;	
 	/* div.animate({ top: '-=100px' }, 600, 'easeOutCubic', function () { … }) */
 }
@@ -618,7 +626,7 @@ main{
 /* --------sec 7 --------------------------------------------------------------------*/
 #sec7{	
 	background:#dddddd;
-	height:100%;
+	height:100vh;
 	width:100%;
 }
 
@@ -626,7 +634,7 @@ main{
 
 #sec8{
 	background: #4a9e69	;
-	height:100%;
+	height:100vh;
 	width:100%;
 	position: relative;
 }
@@ -669,9 +677,9 @@ main{
 /* --------sec 9 --------------------------------------------------------------------*/
 
 #sec9{	
-	background: #b5b5b5 url("../images/Screen 9/Man_Box_cut.png") no-repeat 50% 92%;
+	background: #b5b5b5 url("../images/Screen 9/Man_Box_cut.png") no-repeat 50% 79%;
 	position:relative;
-	height:100%;
+	height:100vh;
 	width:100%;
 }
 
@@ -699,7 +707,7 @@ main{
 
 #B_no{
 	position:relative;
-	top:41.8%;
+	top:50%;
 	left:36%;
 	width:163px;
 	height:121px;
@@ -708,7 +716,7 @@ main{
 
 #B_yes{
 	position:relative;
-	top:26%;
+	top:30.8%;
 	left:51%;
 	width:163px;
 	height:121px;
@@ -717,7 +725,7 @@ main{
 
 #B_no:hover{
 	position:relative;
-	top:41.8%;
+	top:50%;
 	left:36%;
 	width:163px;
 	height:121px;
@@ -726,7 +734,7 @@ main{
 
 #B_yes:hover{
 	position:relative;
-	top:26%;
+	top:30.8%;
 	left:51%;
 	width:163px;
 	height:121px;
@@ -735,9 +743,9 @@ main{
 
 /* --------sec 10 --------------------------------------------------------------------*/
 #sec10{	
-	background: #ffbf47 url("../images/Screen 10/Bos.png") no-repeat 50% 30%;
+	background: #ffbf47 url("../images/Screen 10/Bos.png") no-repeat 50% 70%;
 	position:relative;
-	height:100%;
+	height:100vh;
 	width:100%;
 }
 
@@ -755,7 +763,7 @@ main{
 
 #boss_face{
 	position:relative;
-	top:15.5%;
+	top:18.5%;
 	left:44.8%;
 	width:115px;
 	height:115px;
@@ -764,7 +772,7 @@ main{
 
 #boss_talk{
 	position:relative;
-	bottom:25%;
+	bottom:30%;
 	left:58%;
 	width:145px;
 	height:140px;
@@ -809,7 +817,7 @@ main{
 #sec11{	
 	background: #84c560 url("../images/Screen_11/retirement.png") no-repeat 50% 34%;
 	background-size: 45%; 
-	height:100%;
+	height:100vh;
 	width:100%;
 }
 #sec11>img {
@@ -823,7 +831,7 @@ main{
 
 #sec12{	
 	background: #3a5f8d;
-	height:100%;
+	height:100vh;
 	width:100%;
 }
 
