--- a/css/custom.css
+++ b/css/custom.css
@@ -1,7 +1,3 @@
-/* 
-@import url(http://fonts.googleapis.com/css?family=Walter+Turncoat);
- */
-
 @font-face {
     font-family: 'aduma';
     src: url('../fonts/Aduma_webfont/aduma-medium-webfont.eot');
@@ -203,7 +199,7 @@ main{
 	width:794px;
 	height:347px;
 	margin: auto;
-	top: 18%;
+	top: 22%;
 }
 #paycheck>img {
 	position: absolute;
@@ -238,19 +234,19 @@ main{
 #little_check {
 	display: none;
 	position: absolute;
-	background: #3a5f8d url("../images/Screen 3/Salary.png") no-repeat;
-	background-size: 100% 100%;
+	background: #3a5f8d url("../images/Screen_4/half_little_check.png") no-repeat;
+	background-size: 70% 70%;
 	width: 41%;
 	height: 25%;
-	left: 29%;
+	left: 35%;
 	top: -40%;
 	opacity: 0.6;
 }
 #check_no_changed{
 	position: absolute;
 	width: 140px;
-	top: 54%;
-	left: 69%;
+	top: 12%;
+	left: 43%;
 	background-color:rgba(0, 0, 0, 0);
  	color: #000000;
     border: none;
@@ -353,12 +349,12 @@ main{
 }
 #env_up{
 	position: absolute;
-	top: 5%;
+	top: 24%;
 	left: 20%;
 	background: url("../images/Screen_5/env_up.png") no-repeat center top;
 	background-size: 60%; 
 	width: 60%;
-	height: 40%;
+	height: 50%;
 	z-index: 1;
 }
 #env_down{
@@ -372,17 +368,18 @@ main{
 	z-index: 3;
 }
 #little_check2 {
+	display: none;
 	position: absolute;
 	background: url("../images/Screen 3/Salary.png") no-repeat;
 	background-size: 80% 100%;
 	width: 41%;
-	height: 25%;
+	height: 30%;
 	left: 34%;
 	top: -15%;
 	z-index: 2;	
 }
 #check_no_changed2{
-	z-index: 10;
+/*	z-index: 10; */
 	position: relative;
 	width: 140px;
 	top: 52%;
@@ -640,39 +637,40 @@ main{
 }
 #envelope_up {
 	position: absolute;
-	top: 17%;
-	left: 21%;
+	top: 19%;
+	left: 28%;
 	height: 508px;
-	width: 755px;
+	width: 566px;
 	background: url("../images/Screen 8/Envelope_Back.png") no-repeat center top;
-	background-size: 75%;
+	background-size: 100%;
 	z-index: 1;
 }
 #envelope_down {
 	position: absolute;
-	top: 35%;
-	left: 21%;
+	top: 42%;
+	left: 28%;
 	height: 382px;
-	width: 755px;
+	width: 566px;
 	background: url("../images/Screen 8/Envelope.png") no-repeat center 50%;
-	background-size: 75%;
+	background-size: 100%;
 	z-index: 3;
 }
 #card {
 	position: absolute;
-	left: 25%;
-	top: 17%;
-	height:	 380px; 
-	width: 667px;
+	left: 28%;
+	top: 18%;
+	height:	 380px;
+	margin: auto; 
+	width: 566px; 
 	background: url("../images/Screen 8/Card.png") no-repeat center 50%;
 	background-position-y: 0px;
-	background-size: 77%;
+	background-size: 90%;
 	z-index: 2;
 	transition-duration: 0.3s;
 }
 #card:hover {
 	height: 520px;
-	top: 0%;
+	top: 1%;
 }
 /* --------sec 9 --------------------------------------------------------------------*/
 
